--- a/notebooks/train_and_run_mlp_models.ipynb
+++ b/notebooks/train_and_run_mlp_models.ipynb
@@ -5,9 +5,9 @@
    "id": "9e071b84",
    "metadata": {},
    "source": [
-    "# Iteratively Train the Underlying MLP Models in TELL Using Evolving Time Windows\n",
+    "# Train and Run the Underlying MLP Models in TELL Using Evolving Time Windows\n",
     "\n",
-    "This notebook is the core tool for training the evolving sets of MLP models used in this LDRD. It assumes that the base Total ELectricity Loads (TELL) model has already been installed and the datasets updated to include the most recent data."
+    "This notebook is the core tool for training and running the evolving sets of multilayer perceptron (MLP) models used in this experiment. It assumes that the base Total ELectricity Loads (TELL) model has already been installed and the datasets updated to include the most recent data. The workflow does not change the defauly MLP parameters (e.g., hidden layer sizes, maximum number of iterations, etc.) from TELL. Those could be modified in theory."
    ]
   },
   {
@@ -34,14 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "aa5a9e7b-a9a7-4fdd-957e-2bb5f063afdd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Identify the top-level directory to store the trained MLP models:\n",
     "ba_data_input_dir =  '/Users/burl878/Documents/Code/code_repos/tell/tell/tell_data/tell_quickstarter_data/outputs/compiled_historical_data/'\n",
-    "model_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/trained_mlp_models/'\n"
+    "weather_data_input_dir =  '/Users/burl878/Documents/Code/code_repos/tell/tell/tell_data/sample_forcing_data/historical_weather'\n",
+    "model_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/trained_mlp_models/'\n",
+    "projection_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/mlp_projections/'\n"
    ]
   },
   {
@@ -51,14 +53,7 @@
    "source": [
     "## MLP Model Training\n",
     "\n",
-    "The MLP models underpinning TELL use temporal variations in weather to project hourly demand. More information about this approach is in the MLP section of the `tell` [User Guide](https://immm-sfa.github.io/tell/user_guide.html). We include pre-trained models within the `tell` repository. Note that since the `save_model` parameter is set to false by default running these training steps will not overwrite the models included in `tell`. The default settings for the MLP model training steps are included in the `mlp_settings.yml` file included in the data folder of the `tell` repository. By default the MLP models are trained on data from 2016-2018 and evaluated using data from 2019. The time windows for training and evaluating the models can be modified by altering the `start_time`, `end_time`, and `split_datetime` parameters when calling the `tell.train` function. The following statistical values, all computed using the sklearn package, are used to evaluate the MLP models:\n",
-    "\n",
-    "| Parameter | Description | Documentation |\n",
-    "| :-: | :- | :-: |\n",
-    "| R2 | Coefficient of determination | [sklearn.metrics.r2_score](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.r2_score.html) |\n",
-    "| RMS_ABS | Root-mean-squared of the absolute error | [sklearn.metrics.mean_squared_error](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html#sklearn.metrics.mean_squared_error) |\n",
-    "| RMS_NORM| The RMS_ABS value divided by the mean | [sklearn.metrics.mean_squared_error](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html#sklearn.metrics.mean_squared_error) |\n",
-    "| MAPE| Mean absolute percentage error | [sklearn.metrics.mean_absolute_percentage_error](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_absolute_percentage_error.html#sklearn.metrics.mean_absolute_percentage_error) |"
+    "The MLP models underpinning TELL use temporal variations in weather to project hourly demand. More information about this approach is in the MLP section of the `tell` [User Guide](https://immm-sfa.github.io/tell/user_guide.html). The default settings for the MLP model training steps are included in the `mlp_settings.yml` file included in the data folder of the `tell` repository. By default the MLP models are trained on data from 2016-2018 and evaluated using data from 2019. The time windows for training and evaluating the models can be modified by altering the `start_time`, `end_time`, and `split_datetime` parameters when calling the `tell.train` function."
    ]
   },
   {
@@ -471,9 +466,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4522eade-f01b-4683-9aea-e479761a43a8",
+   "metadata": {},
+   "source": [
+    "# Project Forward Using the Trained MLP Models\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7f9b3a4-dc2a-4630-b9bd-aac9a4aef078",
+   "metadata": {},
+   "source": [
+    "Descriptive text goes here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3e2425f2-5bd9-4b04-be8e-a7cdef8bf5f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function predict in module tell.mlp_predict:\n",
+      "\n",
+      "predict(region: str, year: int, data_dir: str, datetime_field_name: str = 'Time_UTC', save_prediction: bool = False, prediction_output_directory: Optional[str] = None, **kwargs)\n",
+      "    Generate predictions for MLP model for a target region from an input CSV file.\n",
+      "    \n",
+      "    :param region:                      Indicating region / balancing authority we want to train and test on.\n",
+      "                                        Must match with string in CSV files.\n",
+      "    :type region:                       str\n",
+      "    \n",
+      "    :param year:                        Target year to use in YYYY format.\n",
+      "    :type year:                         int\n",
+      "    \n",
+      "    :param data_dir:                    Full path to the directory that houses the input CSV files.\n",
+      "    :type data_dir:                     str\n",
+      "    \n",
+      "    :param save_prediction:             Choice to write predictions to a .csv file\n",
+      "    :type save_prediction:              bool\n",
+      "    \n",
+      "    :param prediction_output_directory: Full path to output directory where prediction files will be written.\n",
+      "    :type prediction_output_directory:  Union[str, None]\n",
+      "    \n",
+      "    :param datetime_field_name:         Name of the datetime field.\n",
+      "    :type datetime_field_name:          str\n",
+      "    \n",
+      "    :param data_column_rename_dict:     Dictionary for the field names present in the input CSV file (keys) to what the\n",
+      "                                        code expects them to be (values).\n",
+      "    :type data_column_rename_dict:      Optional[dict[str]]\n",
+      "    \n",
+      "    :param expected_datetime_columns:   Expected names of the date time columns in the input CSV file.\n",
+      "    :type expected_datetime_columns:    Optional[list[str]]\n",
+      "    \n",
+      "    :param hour_field_name:             Field name of the hour field in the input CSV file.\n",
+      "    :type hour_field_name:              Optional[str]\n",
+      "    \n",
+      "    :param month_field_name:            Field name of the month field in the input CSV file.\n",
+      "    :type month_field_name:             Optional[str]\n",
+      "    \n",
+      "    :param x_variables:                 Target variable list.\n",
+      "    :type x_variables:                  Optional[list[str]]\n",
+      "    \n",
+      "    :param add_dayofweek_xvars:         True if the user wishes to add weekday and holiday targets to the x variables.\n",
+      "    :type add_dayofweek_xvars:          Optional[bool]\n",
+      "    \n",
+      "    :param y_variables:                 Feature variable list.\n",
+      "    :type y_variables:                  Optional[list[str]]\n",
+      "    \n",
+      "    :param day_list:                    List of day abbreviations and their order.\n",
+      "    :type day_list:                     Optional[list[str]]\n",
+      "    \n",
+      "    :param seed_value:                  Seed value to reproduce randomization.\n",
+      "    :type seed_value:                   Optional[int]\n",
+      "    \n",
+      "    :param verbose:                     Choice to see logged outputs.\n",
+      "    :type verbose:                      bool\n",
+      "    \n",
+      "    :return:                            Prediction data frame\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For more information about the how to use the models to project loads forward in time you can call the help function:\n",
+    "help(tell.predict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "477b182f-162b-461c-8a1b-d02dcd7ad37a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time_UTC</th>\n",
+       "      <th>Load</th>\n",
+       "      <th>BA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-01-01 00:00:00</td>\n",
+       "      <td>25411.36</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-01-01 01:00:00</td>\n",
+       "      <td>26044.72</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-01-01 02:00:00</td>\n",
+       "      <td>26146.16</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-01-01 03:00:00</td>\n",
+       "      <td>26215.70</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-01-01 04:00:00</td>\n",
+       "      <td>26246.76</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8755</th>\n",
+       "      <td>2023-12-31 19:00:00</td>\n",
+       "      <td>22907.30</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8756</th>\n",
+       "      <td>2023-12-31 20:00:00</td>\n",
+       "      <td>23024.45</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8757</th>\n",
+       "      <td>2023-12-31 21:00:00</td>\n",
+       "      <td>23075.88</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8758</th>\n",
+       "      <td>2023-12-31 22:00:00</td>\n",
+       "      <td>23113.96</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8759</th>\n",
+       "      <td>2023-12-31 23:00:00</td>\n",
+       "      <td>23193.84</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8760 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Time_UTC      Load    BA\n",
+       "0    2023-01-01 00:00:00  25411.36  CISO\n",
+       "1    2023-01-01 01:00:00  26044.72  CISO\n",
+       "2    2023-01-01 02:00:00  26146.16  CISO\n",
+       "3    2023-01-01 03:00:00  26215.70  CISO\n",
+       "4    2023-01-01 04:00:00  26246.76  CISO\n",
+       "...                  ...       ...   ...\n",
+       "8755 2023-12-31 19:00:00  22907.30  CISO\n",
+       "8756 2023-12-31 20:00:00  23024.45  CISO\n",
+       "8757 2023-12-31 21:00:00  23075.88  CISO\n",
+       "8758 2023-12-31 22:00:00  23113.96  CISO\n",
+       "8759 2023-12-31 23:00:00  23193.84  CISO\n",
+       "\n",
+       "[8760 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Run the MLP training step for a single BA to get a feel of the functionality:\n",
+    "pdf = tell.predict(region = 'CISO',\n",
+    "                   year = 2023,\n",
+    "                   data_dir = weather_data_input_dir,\n",
+    "                   datetime_field_name = 'Time_UTC',\n",
+    "                   save_prediction = True,\n",
+    "                   model_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/trained_mlp_models/M1',\n",
+    "                   prediction_output_directory = projection_output_directory)\n",
+    "\n",
+    "pdf\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0d8595e-59e6-469e-85a9-6fb5ce1228f1",
+   "id": "f9884d35-ba87-4aa0-8739-e066f5237daf",
    "metadata": {},
    "outputs": [],
    "source": []
