--- a/notebooks/calculate_error_statistics.ipynb
+++ b/notebooks/calculate_error_statistics.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "86db683a-70a2-4f89-a1d6-4c6d5f180272",
    "metadata": {
     "tags": []
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "aa5a9e7b-a9a7-4fdd-957e-2bb5f063afdd",
    "metadata": {},
    "outputs": [],
@@ -67,20 +67,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "cfabb7ae-23a8-44ce-9c46-f148ab52f849",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'rms_abs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 62\u001b[0m\n\u001b[1;32m     60\u001b[0m output_df\u001b[38;5;241m.\u001b[39mloc[counter, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mProjection_Year\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m (year\u001b[38;5;241m-\u001b[39mfirst_forward_year)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     61\u001b[0m output_df\u001b[38;5;241m.\u001b[39mloc[counter, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRMS_ABS\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(mean_squared_error(year_subset_df[(model \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_MWh\u001b[39m\u001b[38;5;124m'\u001b[39m)], year_subset_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDemand_MWh\u001b[39m\u001b[38;5;124m'\u001b[39m]))\u001b[38;5;241m.\u001b[39mround(\u001b[38;5;241m3\u001b[39m)\n\u001b[0;32m---> 62\u001b[0m output_df\u001b[38;5;241m.\u001b[39mloc[counter, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRMS_NORM\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m (\u001b[43mrms_abs\u001b[49m \u001b[38;5;241m/\u001b[39m np\u001b[38;5;241m.\u001b[39mmean(year_subset_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDemand_MWh\u001b[39m\u001b[38;5;124m'\u001b[39m]))\u001b[38;5;241m.\u001b[39mround(\u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m     63\u001b[0m output_df\u001b[38;5;241m.\u001b[39mloc[counter, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMAPE\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m mean_absolute_percentage_error(year_subset_df[(model \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_MWh\u001b[39m\u001b[38;5;124m'\u001b[39m)], year_subset_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDemand_MWh\u001b[39m\u001b[38;5;124m'\u001b[39m])\u001b[38;5;241m.\u001b[39mround(\u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m     64\u001b[0m output_df\u001b[38;5;241m.\u001b[39mloc[counter, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mR2\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m r2_score(year_subset_df[(model \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_MWh\u001b[39m\u001b[38;5;124m'\u001b[39m)], year_subset_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDemand_MWh\u001b[39m\u001b[38;5;124m'\u001b[39m])\u001b[38;5;241m.\u001b[39mround(\u001b[38;5;241m3\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'rms_abs' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BA</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Projection_Year</th>\n",
+       "      <th>RMS_ABS</th>\n",
+       "      <th>RMS_NORM</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>R2</th>\n",
+       "      <th>Max_Error_MWh</th>\n",
+       "      <th>Max_Error_%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AZPS</td>\n",
+       "      <td>M1</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>224.692</td>\n",
+       "      <td>0.065</td>\n",
+       "      <td>0.049</td>\n",
+       "      <td>0.951</td>\n",
+       "      <td>1349.7</td>\n",
+       "      <td>31.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AZPS</td>\n",
+       "      <td>M1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2</td>\n",
+       "      <td>279.082</td>\n",
+       "      <td>0.082</td>\n",
+       "      <td>0.061</td>\n",
+       "      <td>0.923</td>\n",
+       "      <td>5934.0</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AZPS</td>\n",
+       "      <td>M1</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>3</td>\n",
+       "      <td>282.327</td>\n",
+       "      <td>0.080</td>\n",
+       "      <td>0.064</td>\n",
+       "      <td>0.934</td>\n",
+       "      <td>2753.4</td>\n",
+       "      <td>62.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AZPS</td>\n",
+       "      <td>M1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "      <td>240.098</td>\n",
+       "      <td>0.068</td>\n",
+       "      <td>0.051</td>\n",
+       "      <td>0.946</td>\n",
+       "      <td>4688.8</td>\n",
+       "      <td>54.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AZPS</td>\n",
+       "      <td>M1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>5</td>\n",
+       "      <td>261.642</td>\n",
+       "      <td>0.072</td>\n",
+       "      <td>0.058</td>\n",
+       "      <td>0.935</td>\n",
+       "      <td>4272.1</td>\n",
+       "      <td>50.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>WACM</td>\n",
+       "      <td>M4</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>893.077</td>\n",
+       "      <td>0.298</td>\n",
+       "      <td>0.279</td>\n",
+       "      <td>-6.708</td>\n",
+       "      <td>3055.2</td>\n",
+       "      <td>550.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>WACM</td>\n",
+       "      <td>M4</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1294.969</td>\n",
+       "      <td>0.351</td>\n",
+       "      <td>0.526</td>\n",
+       "      <td>-15.225</td>\n",
+       "      <td>2404.4</td>\n",
+       "      <td>864.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>WACM</td>\n",
+       "      <td>M5</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>923.138</td>\n",
+       "      <td>0.308</td>\n",
+       "      <td>0.307</td>\n",
+       "      <td>-9.695</td>\n",
+       "      <td>2954.1</td>\n",
+       "      <td>514.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>WACM</td>\n",
+       "      <td>M5</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1445.990</td>\n",
+       "      <td>0.392</td>\n",
+       "      <td>0.631</td>\n",
+       "      <td>-28.367</td>\n",
+       "      <td>2418.3</td>\n",
+       "      <td>763.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>WACM</td>\n",
+       "      <td>M6</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1107.737</td>\n",
+       "      <td>0.300</td>\n",
+       "      <td>0.413</td>\n",
+       "      <td>-6.199</td>\n",
+       "      <td>2461.0</td>\n",
+       "      <td>739.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>168 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       BA Model  Year  Projection_Year   RMS_ABS  RMS_NORM   MAPE      R2  \\\n",
+       "1    AZPS    M1  2018                1   224.692     0.065  0.049   0.951   \n",
+       "2    AZPS    M1  2019                2   279.082     0.082  0.061   0.923   \n",
+       "3    AZPS    M1  2020                3   282.327     0.080  0.064   0.934   \n",
+       "4    AZPS    M1  2021                4   240.098     0.068  0.051   0.946   \n",
+       "5    AZPS    M1  2022                5   261.642     0.072  0.058   0.935   \n",
+       "..    ...   ...   ...              ...       ...       ...    ...     ...   \n",
+       "164  WACM    M4  2022                2   893.077     0.298  0.279  -6.708   \n",
+       "165  WACM    M4  2023                3  1294.969     0.351  0.526 -15.225   \n",
+       "166  WACM    M5  2022                1   923.138     0.308  0.307  -9.695   \n",
+       "167  WACM    M5  2023                2  1445.990     0.392  0.631 -28.367   \n",
+       "168  WACM    M6  2023                1  1107.737     0.300  0.413  -6.199   \n",
+       "\n",
+       "     Max_Error_MWh  Max_Error_%  \n",
+       "1           1349.7         31.2  \n",
+       "2           5934.0          inf  \n",
+       "3           2753.4         62.0  \n",
+       "4           4688.8         54.4  \n",
+       "5           4272.1         50.1  \n",
+       "..             ...          ...  \n",
+       "164         3055.2        550.2  \n",
+       "165         2404.4        864.9  \n",
+       "166         2954.1        514.6  \n",
+       "167         2418.3        763.8  \n",
+       "168         2461.0        739.6  \n",
+       "\n",
+       "[168 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
