Update time series

--- a/notebooks/plot_ba_service_territory.ipynb
+++ b/notebooks/plot_ba_service_territory.ipynb
@@ -5,7 +5,7 @@
    "id": "dd40f4f4-5a80-40b7-94b3-aed136daa9d8",
    "metadata": {},
    "source": [
-    "# Plot Maps of the Service Territory for the Balancing Authorities in the Stationarity Analysis\n"
+    "# Plot Maps of the Service Territory for the Balancing Authorities Analyzed\n"
    ]
   },
   {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "bd887600-32da-46dc-b411-fa63c75f564f",
    "metadata": {
     "pycharm": {
@@ -45,7 +45,7 @@
    },
    "outputs": [],
    "source": [
-    "# Identify the data input and image output directories:\n",
+    "# Identify the data and impage input and output directories:\n",
     "ba_mapping_data_input_dir =  '/Users/burl878/Documents/Code/code_repos/tell/tell/tell_data/tell_quickstarter_data/outputs/ba_service_territory/'\n",
     "county_shapefile_input_dir = '/Users/burl878/Documents/Code/code_repos/tell/tell/tell_data/tell_raw_data/County_Shapefiles/'\n",
     "state_shapefile_input_dir = '/Users/burl878/Documents/Code/code_repos/tell/tell/tell_data/tell_raw_data/State_Shapefiles/'\n",
@@ -58,14 +58,14 @@
    "id": "314cb875-63fd-4b37-b56f-04bbaec8cb25",
    "metadata": {},
    "source": [
-    "## Set the Balancing Authorities to Plot\n",
+    "## Set the List of Balancing Authorities to Plot\n",
     "\n",
-    "BAs used in this analysis are controlled by a master file 'balancing_authorities_modeled.yml\" stored in the /data directory."
+    "BAs used in this analysis are controlled by a master file `balancing_authorities_modeled.yml` stored in the `/data` directory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "acf5bd30-7025-4de2-8818-c8f4a0242684",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
        "['AZPS', 'BPAT', 'CISO', 'ERCO', 'FPL', 'ISNE', 'PJM', 'SWPP']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
