Propagated dynamic BA list

--- a/notebooks/calculate_error_statistics.ipynb
+++ b/notebooks/calculate_error_statistics.ipynb
@@ -29,11 +29,11 @@
     "# Start by importing the TELL package and information about your operating system:\n",
     "import os \n",
     "import tell\n",
+    "import yaml\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "import sklearn\n",
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_percentage_error\n"
    ]
   },
@@ -54,7 +54,45 @@
    "source": [
     "# Identify the data input and output directories:\n",
     "composite_input_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/composite_projections/'\n",
+    "ba_to_process_input_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n",
     "statistics_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89f81b90-8b35-42c5-98e9-12123299141b",
+   "metadata": {},
+   "source": [
+    "## Set the List of Balancing Authorities to Analyze\n",
+    "\n",
+    "BAs used in this analysis are controlled by a master file `balancing_authorities_modeled.yml` stored in the `/data` directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "17d0cab9-ff34-412d-9502-ed334ddd3e95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AZPS', 'BPAT', 'CISO', 'ERCO', 'FPL', 'ISNE', 'PJM', 'SWPP']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read the yml file into a dictionary:\n",
+    "with open((ba_to_process_input_dir + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
+    "     ba_list = yaml.load(yml, Loader=yaml.FullLoader)\n",
+    "     bas = [i for i in ba_list.keys()]\n",
+    "\n",
+    "# Return the list of BAs to process/plot:\n",
+    "bas\n"
    ]
   },
   {
@@ -67,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cfabb7ae-23a8-44ce-9c46-f148ab52f849",
    "metadata": {},
    "outputs": [
@@ -108,7 +146,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AZPS</td>\n",
-       "      <td>M1</td>\n",
+       "      <td>MLP1</td>\n",
        "      <td>2018</td>\n",
        "      <td>1</td>\n",
        "      <td>224.692</td>\n",
@@ -121,54 +159,54 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AZPS</td>\n",
-       "      <td>M1</td>\n",
+       "      <td>MLP1</td>\n",
        "      <td>2019</td>\n",
        "      <td>2</td>\n",
-       "      <td>279.082</td>\n",
-       "      <td>0.082</td>\n",
+       "      <td>263.825</td>\n",
+       "      <td>0.078</td>\n",
        "      <td>0.061</td>\n",
-       "      <td>0.923</td>\n",
-       "      <td>5934.0</td>\n",
-       "      <td>inf</td>\n",
+       "      <td>0.931</td>\n",
+       "      <td>1933.6</td>\n",
+       "      <td>98.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AZPS</td>\n",
-       "      <td>M1</td>\n",
+       "      <td>MLP1</td>\n",
        "      <td>2020</td>\n",
        "      <td>3</td>\n",
-       "      <td>282.327</td>\n",
+       "      <td>280.777</td>\n",
        "      <td>0.080</td>\n",
        "      <td>0.064</td>\n",
        "      <td>0.934</td>\n",
-       "      <td>2753.4</td>\n",
+       "      <td>1658.0</td>\n",
        "      <td>62.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>AZPS</td>\n",
-       "      <td>M1</td>\n",
+       "      <td>MLP1</td>\n",
        "      <td>2021</td>\n",
        "      <td>4</td>\n",
-       "      <td>240.098</td>\n",
-       "      <td>0.068</td>\n",
-       "      <td>0.051</td>\n",
-       "      <td>0.946</td>\n",
-       "      <td>4688.8</td>\n",
-       "      <td>54.4</td>\n",
+       "      <td>227.140</td>\n",
+       "      <td>0.065</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.952</td>\n",
+       "      <td>1089.8</td>\n",
+       "      <td>30.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>AZPS</td>\n",
-       "      <td>M1</td>\n",
+       "      <td>MLP1</td>\n",
        "      <td>2022</td>\n",
        "      <td>5</td>\n",
-       "      <td>261.642</td>\n",
-       "      <td>0.072</td>\n",
+       "      <td>255.591</td>\n",
+       "      <td>0.070</td>\n",
        "      <td>0.058</td>\n",
-       "      <td>0.935</td>\n",
-       "      <td>4272.1</td>\n",
-       "      <td>50.1</td>\n",
+       "      <td>0.938</td>\n",
+       "      <td>1377.8</td>\n",
+       "      <td>43.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -185,68 +223,68 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>164</th>\n",
-       "      <td>WACM</td>\n",
-       "      <td>M4</td>\n",
+       "      <td>SWPP</td>\n",
+       "      <td>MLP4</td>\n",
        "      <td>2022</td>\n",
        "      <td>2</td>\n",
-       "      <td>893.077</td>\n",
-       "      <td>0.298</td>\n",
-       "      <td>0.279</td>\n",
-       "      <td>-6.708</td>\n",
-       "      <td>3055.2</td>\n",
-       "      <td>550.2</td>\n",
+       "      <td>1849.499</td>\n",
+       "      <td>0.057</td>\n",
+       "      <td>0.049</td>\n",
+       "      <td>0.898</td>\n",
+       "      <td>7556.4</td>\n",
+       "      <td>25.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>165</th>\n",
-       "      <td>WACM</td>\n",
-       "      <td>M4</td>\n",
+       "      <td>SWPP</td>\n",
+       "      <td>MLP4</td>\n",
        "      <td>2023</td>\n",
        "      <td>3</td>\n",
-       "      <td>1294.969</td>\n",
-       "      <td>0.351</td>\n",
-       "      <td>0.526</td>\n",
-       "      <td>-15.225</td>\n",
-       "      <td>2404.4</td>\n",
-       "      <td>864.9</td>\n",
+       "      <td>1976.458</td>\n",
+       "      <td>0.062</td>\n",
+       "      <td>0.057</td>\n",
+       "      <td>0.889</td>\n",
+       "      <td>10046.0</td>\n",
+       "      <td>21.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>166</th>\n",
-       "      <td>WACM</td>\n",
-       "      <td>M5</td>\n",
+       "      <td>SWPP</td>\n",
+       "      <td>MLP5</td>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
-       "      <td>923.138</td>\n",
-       "      <td>0.308</td>\n",
-       "      <td>0.307</td>\n",
-       "      <td>-9.695</td>\n",
-       "      <td>2954.1</td>\n",
-       "      <td>514.6</td>\n",
+       "      <td>1653.589</td>\n",
+       "      <td>0.051</td>\n",
+       "      <td>0.041</td>\n",
+       "      <td>0.915</td>\n",
+       "      <td>7973.3</td>\n",
+       "      <td>17.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>167</th>\n",
-       "      <td>WACM</td>\n",
-       "      <td>M5</td>\n",
+       "      <td>SWPP</td>\n",
+       "      <td>MLP5</td>\n",
        "      <td>2023</td>\n",
        "      <td>2</td>\n",
-       "      <td>1445.990</td>\n",
-       "      <td>0.392</td>\n",
-       "      <td>0.631</td>\n",
-       "      <td>-28.367</td>\n",
-       "      <td>2418.3</td>\n",
-       "      <td>763.8</td>\n",
+       "      <td>1761.117</td>\n",
+       "      <td>0.055</td>\n",
+       "      <td>0.047</td>\n",
+       "      <td>0.909</td>\n",
+       "      <td>9657.4</td>\n",
+       "      <td>20.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>168</th>\n",
-       "      <td>WACM</td>\n",
-       "      <td>M6</td>\n",
+       "      <td>SWPP</td>\n",
+       "      <td>MLP6</td>\n",
        "      <td>2023</td>\n",
        "      <td>1</td>\n",
-       "      <td>1107.737</td>\n",
-       "      <td>0.300</td>\n",
-       "      <td>0.413</td>\n",
-       "      <td>-6.199</td>\n",
-       "      <td>2461.0</td>\n",
-       "      <td>739.6</td>\n",
+       "      <td>1575.704</td>\n",
+       "      <td>0.049</td>\n",
+       "      <td>0.041</td>\n",
+       "      <td>0.932</td>\n",
+       "      <td>8238.4</td>\n",
+       "      <td>17.7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -254,36 +292,36 @@
        "</div>"
       ],
       "text/plain": [
-       "       BA Model  Year  Projection_Year   RMS_ABS  RMS_NORM   MAPE      R2  \\\n",
-       "1    AZPS    M1  2018                1   224.692     0.065  0.049   0.951   \n",
-       "2    AZPS    M1  2019                2   279.082     0.082  0.061   0.923   \n",
-       "3    AZPS    M1  2020                3   282.327     0.080  0.064   0.934   \n",
-       "4    AZPS    M1  2021                4   240.098     0.068  0.051   0.946   \n",
-       "5    AZPS    M1  2022                5   261.642     0.072  0.058   0.935   \n",
-       "..    ...   ...   ...              ...       ...       ...    ...     ...   \n",
-       "164  WACM    M4  2022                2   893.077     0.298  0.279  -6.708   \n",
-       "165  WACM    M4  2023                3  1294.969     0.351  0.526 -15.225   \n",
-       "166  WACM    M5  2022                1   923.138     0.308  0.307  -9.695   \n",
-       "167  WACM    M5  2023                2  1445.990     0.392  0.631 -28.367   \n",
-       "168  WACM    M6  2023                1  1107.737     0.300  0.413  -6.199   \n",
+       "       BA Model  Year  Projection_Year   RMS_ABS  RMS_NORM   MAPE     R2  \\\n",
+       "1    AZPS  MLP1  2018                1   224.692     0.065  0.049  0.951   \n",
+       "2    AZPS  MLP1  2019                2   263.825     0.078  0.061  0.931   \n",
+       "3    AZPS  MLP1  2020                3   280.777     0.080  0.064  0.934   \n",
+       "4    AZPS  MLP1  2021                4   227.140     0.065  0.050  0.952   \n",
+       "5    AZPS  MLP1  2022                5   255.591     0.070  0.058  0.938   \n",
+       "..    ...   ...   ...              ...       ...       ...    ...    ...   \n",
+       "164  SWPP  MLP4  2022                2  1849.499     0.057  0.049  0.898   \n",
+       "165  SWPP  MLP4  2023                3  1976.458     0.062  0.057  0.889   \n",
+       "166  SWPP  MLP5  2022                1  1653.589     0.051  0.041  0.915   \n",
+       "167  SWPP  MLP5  2023                2  1761.117     0.055  0.047  0.909   \n",
+       "168  SWPP  MLP6  2023                1  1575.704     0.049  0.041  0.932   \n",
        "\n",
        "     Max_Error_MWh  Max_Error_%  \n",
        "1           1349.7         31.2  \n",
-       "2           5934.0          inf  \n",
-       "3           2753.4         62.0  \n",
-       "4           4688.8         54.4  \n",
-       "5           4272.1         50.1  \n",
+       "2           1933.6         98.4  \n",
+       "3           1658.0         62.0  \n",
+       "4           1089.8         30.5  \n",
+       "5           1377.8         43.3  \n",
        "..             ...          ...  \n",
-       "164         3055.2        550.2  \n",
-       "165         2404.4        864.9  \n",
-       "166         2954.1        514.6  \n",
-       "167         2418.3        763.8  \n",
-       "168         2461.0        739.6  \n",
+       "164         7556.4         25.1  \n",
+       "165        10046.0         21.3  \n",
+       "166         7973.3         17.8  \n",
+       "167         9657.4         20.5  \n",
+       "168         8238.4         17.7  \n",
        "\n",
        "[168 rows x 10 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +332,7 @@
     "output_df = pd.DataFrame()\n",
     "\n",
     "# Loop over the eight BAs used in this LDRD analysis:\n",
-    "for ba in ['AZPS', 'BPAT', 'CISO', 'ERCO', 'FPL', 'ISNE', 'PJM', 'WACM']:\n",
+    "for ba in bas:\n",
     "\n",
     "    # Load in the compiled projection file:\n",
     "    ba_df = pd.read_csv((composite_input_directory + ba + '_Composite_Data.csv'), index_col=None, header=0)\n",
@@ -309,20 +347,20 @@
     "    ba_df['Year'] = ba_df['Time_UTC'].dt.year  \n",
     "    \n",
     "    # Loop over all the model training windows:\n",
-    "    for model in ['M1', 'M2', 'M3', 'M4', 'M5', 'M6']:\n",
+    "    for model in ['MLP1', 'MLP2', 'MLP3', 'MLP4', 'MLP5', 'MLP6']:\n",
     "    \n",
     "        # Set the first forward year for each model:\n",
-    "        if model == 'M1':\n",
+    "        if model == 'MLP1':\n",
     "           first_forward_year = 2018\n",
-    "        if model == 'M2':\n",
+    "        if model == 'MLP2':\n",
     "           first_forward_year = 2019\n",
-    "        if model == 'M3':\n",
+    "        if model == 'MLP3':\n",
     "           first_forward_year = 2020\n",
-    "        if model == 'M4':\n",
+    "        if model == 'MLP4':\n",
     "           first_forward_year = 2021\n",
-    "        if model == 'M5':\n",
+    "        if model == 'MLP5':\n",
     "           first_forward_year = 2022\n",
-    "        if model == 'M6':\n",
+    "        if model == 'MLP6':\n",
     "           first_forward_year = 2023\n",
     "\n",
     "        # Subset the data to just the variables needed for that model:\n",
