--- a/notebooks/train_and_run_mlp_models.ipynb
+++ b/notebooks/train_and_run_mlp_models.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "86db683a-70a2-4f89-a1d6-4c6d5f180272",
    "metadata": {
     "tags": []
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "aa5a9e7b-a9a7-4fdd-957e-2bb5f063afdd",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
     "# Identify the top-level directory to store the trained MLP models:\n",
     "cleaned_ba_data_output_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/cleaned_historical_data/'\n",
     "ba_to_process_input_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n",
-    "weather_data_input_dir =  '/Users/burl878/Documents/Code/code_repos/tell/tell/tell_data/sample_forcing_data/historical_weather'\n",
+    "weather_data_input_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/historical_weather'\n",
     "model_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/trained_mlp_models/'\n",
     "prediction_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/mlp_projections/'\n",
     "composite_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/composite_projections/'\n"
@@ -63,10 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "be839966-941b-4902-af8e-5de92b71b22a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AZPS', 'BPAT', 'CISO', 'ERCO', 'FPL', 'ISNE', 'PJM', 'SWPP']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read the yml file into a dictionary:\n",
     "with open((ba_to_process_input_dir + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
@@ -89,12 +100,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "439b742f-c5e9-487b-be65-ee3f25199ec7",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function train in module tell.mlp_train:\n",
+      "\n",
+      "train(region: str, data_dir: str, **kwargs)\n",
+      "    Generate predictions for MLP model for a target region from an input CSV file.\n",
+      "    \n",
+      "    :param region:                      Indicating region / balancing authority we want to train and test on.\n",
+      "                                        Must match with string in CSV files.\n",
+      "    :type region:                       str\n",
+      "    \n",
+      "    :param data_dir:                    Full path to the directory that houses the input CSV files.\n",
+      "    :type data_dir:                     str\n",
+      "    \n",
+      "    :param mlp_hidden_layer_sizes:      The ith element represents the number of neurons in the ith hidden layer.\n",
+      "    :type mlp_hidden_layer_sizes:       Optional[int]\n",
+      "    \n",
+      "    :param mlp_max_iter:                Maximum number of iterations. The solver iterates until convergence\n",
+      "                                        (determined by ‘tol’) or this number of iterations. For stochastic solvers\n",
+      "                                        (‘sgd’, ‘adam’), note that this determines the number of epochs (how many\n",
+      "                                        times each data point will be used), not the number of gradient steps.\n",
+      "    :type mlp_max_iter:                 Optional[int]\n",
+      "    \n",
+      "    :param mlp_validation_fraction:     The proportion of training data to set aside as validation set for early\n",
+      "                                        stopping. Must be between 0 and 1.\n",
+      "    :type mlp_validation_fraction:      Optional[float]\n",
+      "    \n",
+      "    :param data_column_rename_dict:     Dictionary for the field names present in the input CSV file (keys) to what the\n",
+      "                                        code expects them to be (values).\n",
+      "    :type data_column_rename_dict:      Optional[dict[str]]\n",
+      "    \n",
+      "    :param expected_datetime_columns:   Expected names of the date time columns in the input CSV file.\n",
+      "    :type expected_datetime_columns:    Optional[list[str]]\n",
+      "    \n",
+      "    :param hour_field_name:             Field name of the hour field in the input CSV file.\n",
+      "    :type hour_field_name:              Optional[str]\n",
+      "    \n",
+      "    :param month_field_name:            Field name of the month field in the input CSV file.\n",
+      "    :type month_field_name:             Optional[str]\n",
+      "    \n",
+      "    :param x_variables:                 Target variable list.\n",
+      "    :type x_variables:                  Optional[list[str]]\n",
+      "    \n",
+      "    :param add_dayofweek_xvars:         True if the user wishes to add weekday and holiday targets to the x variables.\n",
+      "    :type add_dayofweek_xvars:          Optional[bool]\n",
+      "    \n",
+      "    :param y_variables:                 Feature variable list.\n",
+      "    :type y_variables:                  Optional[list[str]]\n",
+      "    \n",
+      "    :param day_list:                    List of day abbreviations and their order.\n",
+      "    :type day_list:                     Optional[list[str]]\n",
+      "    \n",
+      "    :param start_time:                  Timestamp showing the datetime of for the run to start\n",
+      "                                        (e.g., 2016-01-01 00:00:00).\n",
+      "    :type start_time:                   Optional[str]\n",
+      "    \n",
+      "    :param end_time:                    Timestamp showing the datetime of for the run to end\n",
+      "                                        (e.g., 2019-12-31 23:00:00).\n",
+      "    :type end_time:                     Optional[str]\n",
+      "    \n",
+      "    :param split_datetime:              Timestamp showing the datetime to split the train and test data by\n",
+      "                                        (e.g., 2018-12-31 23:00:00).\n",
+      "    :type split_datetime:               Optional[str]\n",
+      "    \n",
+      "    :param nodata_value:                No data value in the input CSV file.\n",
+      "    :type nodata_value:                 Optional[int]\n",
+      "    \n",
+      "    :param seed_value:                  Seed value to reproduce randomization.\n",
+      "    :type seed_value:                   Optional[int]\n",
+      "    \n",
+      "    :param save_model:                  Choice to write ML models to a pickled file via joblib.\n",
+      "    :type save_model:                   bool\n",
+      "    \n",
+      "    :param model_output_directory:      Full path to output directory where model file will be written.\n",
+      "    :type model_output_directory:       Union[str, None]\n",
+      "    \n",
+      "    :param verbose:                     Choice to see logged outputs.\n",
+      "    :type verbose:                      bool\n",
+      "    \n",
+      "    :return:                            [0] Predictions as a dataframe\n",
+      "                                        [1] Summary statistics as a dataframe\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# For more information about the training of predictive models you can call the help function:\n",
     "help(tell.train)\n"
@@ -102,12 +200,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ccddc4b8",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>predictions</th>\n",
+       "      <th>ground_truth</th>\n",
+       "      <th>region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-01 00:00:00</td>\n",
+       "      <td>19558.855040</td>\n",
+       "      <td>22497.0</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-01 01:00:00</td>\n",
+       "      <td>24234.389987</td>\n",
+       "      <td>24297.0</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-01 02:00:00</td>\n",
+       "      <td>24867.025706</td>\n",
+       "      <td>26918.0</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-01 03:00:00</td>\n",
+       "      <td>25423.816113</td>\n",
+       "      <td>26849.0</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-01 04:00:00</td>\n",
+       "      <td>25082.532154</td>\n",
+       "      <td>25968.0</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-01-01 05:00:00</td>\n",
+       "      <td>24106.800709</td>\n",
+       "      <td>25044.0</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-01-01 06:00:00</td>\n",
+       "      <td>23192.030982</td>\n",
+       "      <td>24185.0</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2020-01-01 07:00:00</td>\n",
+       "      <td>22227.265649</td>\n",
+       "      <td>23305.0</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2020-01-01 08:00:00</td>\n",
+       "      <td>21233.518247</td>\n",
+       "      <td>22467.0</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2020-01-01 09:00:00</td>\n",
+       "      <td>20275.718493</td>\n",
+       "      <td>21810.0</td>\n",
+       "      <td>CISO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             datetime   predictions  ground_truth region\n",
+       "0 2020-01-01 00:00:00  19558.855040       22497.0   CISO\n",
+       "1 2020-01-01 01:00:00  24234.389987       24297.0   CISO\n",
+       "2 2020-01-01 02:00:00  24867.025706       26918.0   CISO\n",
+       "3 2020-01-01 03:00:00  25423.816113       26849.0   CISO\n",
+       "4 2020-01-01 04:00:00  25082.532154       25968.0   CISO\n",
+       "5 2020-01-01 05:00:00  24106.800709       25044.0   CISO\n",
+       "6 2020-01-01 06:00:00  23192.030982       24185.0   CISO\n",
+       "7 2020-01-01 07:00:00  22227.265649       23305.0   CISO\n",
+       "8 2020-01-01 08:00:00  21233.518247       22467.0   CISO\n",
+       "9 2020-01-01 09:00:00  20275.718493       21810.0   CISO"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BA</th>\n",
+       "      <th>RMS_ABS</th>\n",
+       "      <th>RMS_NORM</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>R2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CISO</td>\n",
+       "      <td>1990.201611</td>\n",
+       "      <td>0.080216</td>\n",
+       "      <td>0.058195</td>\n",
+       "      <td>0.859668</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     BA      RMS_ABS  RMS_NORM      MAPE        R2\n",
+       "0  CISO  1990.201611  0.080216  0.058195  0.859668"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run the MLP training step for a single BA to get a feel of the functionality:\n",
     "prediction_df, validation_df = tell.train(region = 'CISO',\n",
