--- a/notebooks/train_and_run_mlp_models.ipynb
+++ b/notebooks/train_and_run_mlp_models.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "86db683a-70a2-4f89-a1d6-4c6d5f180272",
    "metadata": {
     "tags": []
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "aa5a9e7b-a9a7-4fdd-957e-2bb5f063afdd",
    "metadata": {},
    "outputs": [],
@@ -58,12 +58,12 @@
    "source": [
     "## Set the List of Balancing Authorities to Analyze\n",
     "\n",
-    "BAs used in this analysis are controlled by a master file `balancing_authorities_modeled.yml` stored in the `/data` directory."
+    "BAs used in this analysis are controlled by a master file `balancing_authorities_modeled.yml` stored in the `/data` directory.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "be839966-941b-4902-af8e-5de92b71b22a",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "['AZPS', 'BPAT', 'CISO', 'ERCO', 'FPL', 'ISNE', 'PJM', 'SWPP']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "ccddc4b8",
    "metadata": {
     "tags": []
@@ -237,70 +237,70 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2020-01-01 00:00:00</td>\n",
-       "      <td>19558.855040</td>\n",
+       "      <td>14132.962047</td>\n",
        "      <td>22497.0</td>\n",
        "      <td>CISO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2020-01-01 01:00:00</td>\n",
-       "      <td>24234.389987</td>\n",
+       "      <td>16730.206115</td>\n",
        "      <td>24297.0</td>\n",
        "      <td>CISO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2020-01-01 02:00:00</td>\n",
-       "      <td>24867.025706</td>\n",
+       "      <td>17538.045667</td>\n",
        "      <td>26918.0</td>\n",
        "      <td>CISO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2020-01-01 03:00:00</td>\n",
-       "      <td>25423.816113</td>\n",
+       "      <td>17851.649071</td>\n",
        "      <td>26849.0</td>\n",
        "      <td>CISO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2020-01-01 04:00:00</td>\n",
-       "      <td>25082.532154</td>\n",
+       "      <td>17573.402353</td>\n",
        "      <td>25968.0</td>\n",
        "      <td>CISO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2020-01-01 05:00:00</td>\n",
-       "      <td>24106.800709</td>\n",
+       "      <td>16992.306304</td>\n",
        "      <td>25044.0</td>\n",
        "      <td>CISO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2020-01-01 06:00:00</td>\n",
-       "      <td>23192.030982</td>\n",
+       "      <td>16169.389993</td>\n",
        "      <td>24185.0</td>\n",
        "      <td>CISO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>2020-01-01 07:00:00</td>\n",
-       "      <td>22227.265649</td>\n",
+       "      <td>15322.279828</td>\n",
        "      <td>23305.0</td>\n",
        "      <td>CISO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>2020-01-01 08:00:00</td>\n",
-       "      <td>21233.518247</td>\n",
+       "      <td>14480.421379</td>\n",
        "      <td>22467.0</td>\n",
        "      <td>CISO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>2020-01-01 09:00:00</td>\n",
-       "      <td>20275.718493</td>\n",
+       "      <td>13801.735347</td>\n",
        "      <td>21810.0</td>\n",
        "      <td>CISO</td>\n",
        "    </tr>\n",
@@ -310,16 +310,16 @@
       ],
       "text/plain": [
        "             datetime   predictions  ground_truth region\n",
-       "0 2020-01-01 00:00:00  19558.855040       22497.0   CISO\n",
-       "1 2020-01-01 01:00:00  24234.389987       24297.0   CISO\n",
-       "2 2020-01-01 02:00:00  24867.025706       26918.0   CISO\n",
-       "3 2020-01-01 03:00:00  25423.816113       26849.0   CISO\n",
-       "4 2020-01-01 04:00:00  25082.532154       25968.0   CISO\n",
-       "5 2020-01-01 05:00:00  24106.800709       25044.0   CISO\n",
-       "6 2020-01-01 06:00:00  23192.030982       24185.0   CISO\n",
-       "7 2020-01-01 07:00:00  22227.265649       23305.0   CISO\n",
-       "8 2020-01-01 08:00:00  21233.518247       22467.0   CISO\n",
-       "9 2020-01-01 09:00:00  20275.718493       21810.0   CISO"
+       "0 2020-01-01 00:00:00  14132.962047       22497.0   CISO\n",
+       "1 2020-01-01 01:00:00  16730.206115       24297.0   CISO\n",
+       "2 2020-01-01 02:00:00  17538.045667       26918.0   CISO\n",
+       "3 2020-01-01 03:00:00  17851.649071       26849.0   CISO\n",
+       "4 2020-01-01 04:00:00  17573.402353       25968.0   CISO\n",
+       "5 2020-01-01 05:00:00  16992.306304       25044.0   CISO\n",
+       "6 2020-01-01 06:00:00  16169.389993       24185.0   CISO\n",
+       "7 2020-01-01 07:00:00  15322.279828       23305.0   CISO\n",
+       "8 2020-01-01 08:00:00  14480.421379       22467.0   CISO\n",
+       "9 2020-01-01 09:00:00  13801.735347       21810.0   CISO"
       ]
      },
      "metadata": {},
@@ -357,10 +357,10 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>CISO</td>\n",
-       "      <td>1990.201611</td>\n",
-       "      <td>0.080216</td>\n",
-       "      <td>0.058195</td>\n",
-       "      <td>0.859668</td>\n",
+       "      <td>3502.927734</td>\n",
+       "      <td>0.141187</td>\n",
+       "      <td>0.132898</td>\n",
+       "      <td>0.649472</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -368,10 +368,10 @@
       ],
       "text/plain": [
        "     BA      RMS_ABS  RMS_NORM      MAPE        R2\n",
-       "0  CISO  1990.201611  0.080216  0.058195  0.859668"
+       "0  CISO  3502.927734  0.141187  0.132898  0.649472"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,6 +383,7 @@
     "                                          start_time = '2018-01-01 00:00:00',\n",
     "                                          end_time = '2020-12-31 23:00:00',\n",
     "                                          split_datetime = '2019-12-31 23:00:00',\n",
+    "                                          x_variables = [\"Hour\", \"Month\", \"Temperature\", \"Specific_Humidity\", \"Wind_Speed\", \"Longwave_Radiation\", \"Shortwave_Radiation\", \"Population\"],\n",
     "                                          save_model = True,\n",
     "                                          model_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/trained_mlp_models/MLP1/')\n",
     "\n",
