--- a/notebooks/plot_ba_load_weather_time_series.ipynb
+++ b/notebooks/plot_ba_load_weather_time_series.ipynb
@@ -50,10 +50,10 @@
    "outputs": [],
    "source": [
     "# Identify the data and impage input and output directories:\n",
-    "ba_data_input_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/compiled_historical_data/'\n",
-    "ba_to_process_input_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n",
-    "cleaned_ba_data_output_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/cleaned_historical_data/'\n",
-    "image_output_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/figures/'\n"
+    "ba_data_input_directory =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/compiled_historical_data/'\n",
+    "ba_to_process_input_directory =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n",
+    "cleaned_ba_data_output_directory =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/cleaned_historical_data/'\n",
+    "image_output_directory =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/figures/'\n"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "# Read the yml file into a dictionary:\n",
-    "with open((ba_to_process_input_dir + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
+    "with open((ba_to_process_input_directory + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
     "     ba_list = yaml.load(yml, Loader=yaml.FullLoader)\n",
     "     bas = [i for i in ba_list.keys()]\n",
     "\n",
@@ -97,9 +97,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_load_time_series(ba_to_process: str, start_year: int, end_year: int, ba_data_input_dir: str, cleaned_ba_data_output_dir: str):\n",
+    "def clean_load_time_series(ba_to_process: str, start_year: int, end_year: int, ba_data_input_directory: str, cleaned_ba_data_output_directory: str):\n",
     "    # Read in the compiled historical dataset created by the TELL preprocessing:\n",
-    "    ba_df = pd.read_csv((ba_data_input_dir + ba_to_process + '_historical_data.csv'))\n",
+    "    ba_df = pd.read_csv((ba_data_input_directory + ba_to_process + '_historical_data.csv'))\n",
     "\n",
     "    # Convert the time columns into one datetime variable:\n",
     "    ba_df['Time_UTC'] = pd.to_datetime(ba_df[['Year', 'Month', 'Day', 'Hour']])\n",
@@ -118,7 +118,7 @@
     "    ba_df.loc[ba_df['Adjusted_Demand_MWh'] >= ((5*ba_df['Adjusted_Demand_MWh'].std()) + ba_df['Adjusted_Demand_MWh'].mean()), 'Cleaned_Demand_MWh'] = np.nan\n",
     "    \n",
     "    # Set the output file name:\n",
-    "    csv_output_filename = (cleaned_ba_data_output_dir + ba_to_process + '_cleaned_historical_data.csv')\n",
+    "    csv_output_filename = (cleaned_ba_data_output_directory + ba_to_process + '_cleaned_historical_data.csv')\n",
     "\n",
     "    # Write out the dataframe to a .csv file:\n",
     "    ba_df.to_csv(csv_output_filename, sep=',', index=False)\n"
@@ -136,8 +136,8 @@
     "    clean_load_time_series(ba_to_process = ba,\n",
     "                           start_year = 2016,\n",
     "                           end_year = 2023,\n",
-    "                           ba_data_input_dir = ba_data_input_dir,\n",
-    "                           cleaned_ba_data_output_dir = cleaned_ba_data_output_dir)\n"
+    "                           ba_data_input_directory = ba_data_input_directory,\n",
+    "                           cleaned_ba_data_output_directory = cleaned_ba_data_output_directory)\n"
    ]
   },
   {
@@ -155,9 +155,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_load_weather_time_series(ba_to_plot: str, start_year: int, end_year: int, ba_data_input_dir: str, image_output_dir: str, image_resolution: int, save_images=False):\n",
+    "def plot_load_weather_time_series(ba_to_plot: str, start_year: int, end_year: int, ba_data_input_directory: str, image_output_directory: str, image_resolution: int, save_images=False):\n",
     "    # Read in the cleaned historical data file:\n",
-    "    ba_df = pd.read_csv((cleaned_ba_data_output_dir + ba_to_plot + '_cleaned_historical_data.csv'))\n",
+    "    ba_df = pd.read_csv((cleaned_ba_data_output_directory + ba_to_plot + '_cleaned_historical_data.csv'))\n",
     "\n",
     "    # Convert the time columns into one datetime variable:\n",
     "    ba_df['Time_UTC'] = pd.to_datetime(ba_df[['Year', 'Month', 'Day', 'Hour']])\n",
@@ -213,7 +213,7 @@
     "\n",
     "    # If the \"save_images\" flag is set to true then save the plot to a .png file:\n",
     "    if save_images == True:\n",
-    "       plt.savefig(os.path.join(image_output_dir + 'BA_Load_Weather_Time_Series_' + ba_to_plot + '.png'), dpi=image_resolution, bbox_inches='tight')\n",
+    "       plt.savefig(os.path.join(image_output_directory + 'BA_Load_Weather_Time_Series_' + ba_to_plot + '.png'), dpi=image_resolution, bbox_inches='tight')\n",
     "       plt.close()\n"
    ]
   },
@@ -237,8 +237,8 @@
     "    output_df = plot_load_weather_time_series(ba_to_plot = ba,\n",
     "                                              start_year = 2016,\n",
     "                                              end_year = 2023,\n",
-    "                                              ba_data_input_dir = ba_data_input_dir,\n",
-    "                                              image_output_dir = image_output_dir, \n",
+    "                                              ba_data_input_directory = ba_data_input_directory,\n",
+    "                                              image_output_directory = image_output_directory, \n",
     "                                              image_resolution = 300, \n",
     "                                              save_images = True)\n"
    ]
