--- a/notebooks/plot_ba_service_territory.ipynb
+++ b/notebooks/plot_ba_service_territory.ipynb
@@ -46,11 +46,11 @@
    "outputs": [],
    "source": [
     "# Identify the data and impage input and output directories:\n",
-    "ba_mapping_data_input_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/ba_service_territory/'\n",
-    "county_shapefile_input_dir = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/county_shapefiles/'\n",
-    "state_shapefile_input_dir = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/state_shapefiles/'\n",
-    "ba_to_process_input_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n",
-    "image_output_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/figures/'\n"
+    "ba_mapping_data_input_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/ba_service_territory/'\n",
+    "county_shapefile_input_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/county_shapefiles/'\n",
+    "state_shapefile_input_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/state_shapefiles/'\n",
+    "ba_to_process_input_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n",
+    "image_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/figures/'\n"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "# Read the yml file into a dictionary:\n",
-    "with open((ba_to_process_input_dir + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
+    "with open((ba_to_process_input_directory + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
     "     ba_list = yaml.load(yml, Loader=yaml.FullLoader)\n",
     "     bas = [i for i in ba_list.keys()]\n",
     "\n",
@@ -94,15 +94,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_ba_service_territory(bas_to_plot: str, ba_mapping_data_input_dir: str, county_shapefile_input_dir: str, state_shapefile_input_dir: str,\n",
-    "                              image_output_dir: str, image_resolution: int, save_images=False):\n",
+    "def plot_ba_service_territory(bas_to_plot: str, ba_mapping_data_input_directory: str, county_shapefile_input_directory: str, state_shapefile_input_directory: str,\n",
+    "                              image_output_directory: str, image_resolution: int, save_images=False):\n",
     "    \n",
     "    # Read in the county shapefile and reassign the 'FIPS' variable as integers:\n",
-    "    counties_df = gpd.read_file(os.path.join(county_shapefile_input_dir, r'tl_2020_us_county.shp')).rename(columns={'GEOID': 'County_FIPS'})\n",
+    "    counties_df = gpd.read_file(os.path.join(county_shapefile_input_directory, r'tl_2020_us_county.shp')).rename(columns={'GEOID': 'County_FIPS'})\n",
     "    counties_df['County_FIPS'] = counties_df['County_FIPS'].astype(int)\n",
     "\n",
     "    # Read in the BA mapping file:\n",
-    "    ba_mapping_df = pd.read_csv((os.path.join(ba_mapping_data_input_dir, 'ba_service_territory_2019.csv')), index_col=None, header=0)\n",
+    "    ba_mapping_df = pd.read_csv((os.path.join(ba_mapping_data_input_directory, 'ba_service_territory_2019.csv')), index_col=None, header=0)\n",
     "\n",
     "    # Merge the ba_mapping_df and counties_df together using county FIPS codes to join them:\n",
     "    counties_df = counties_df.merge(ba_mapping_df, on='County_FIPS', how='left')\n",
@@ -111,7 +111,7 @@
     "    counties_subset_df = counties_df.loc[counties_df['BA_Code'].isin(bas_to_plot)]\n",
     "    \n",
     "    # Read in the state shapefile:\n",
-    "    states_df = gpd.read_file(os.path.join(state_shapefile_input_dir, 'tl_2020_us_state.shp')).rename(columns={'NAME': 'State'})\n",
+    "    states_df = gpd.read_file(os.path.join(state_shapefile_input_directory, 'tl_2020_us_state.shp')).rename(columns={'NAME': 'State'})\n",
     "    \n",
     "    # Create the figure:\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(25, 10))\n",
@@ -126,7 +126,7 @@
     "\n",
     "    # If the \"save_images\" flag is set to true then save the plot to a .png file:\n",
     "    if save_images == True:\n",
-    "       plt.savefig(os.path.join(image_output_dir + 'BA_Service_Territory.png'), dpi=image_resolution, bbox_inches='tight')\n"
+    "       plt.savefig(os.path.join(image_output_directory + 'BA_Service_Territory.png'), dpi=image_resolution, bbox_inches='tight')\n"
    ]
   },
   {
@@ -145,10 +145,10 @@
    "outputs": [],
    "source": [
     "plot_ba_service_territory(bas_to_plot = bas,\n",
-    "                          ba_mapping_data_input_dir = ba_mapping_data_input_dir, \n",
-    "                          county_shapefile_input_dir = county_shapefile_input_dir,\n",
-    "                          state_shapefile_input_dir = state_shapefile_input_dir,\n",
-    "                          image_output_dir = image_output_dir, \n",
+    "                          ba_mapping_data_input_directory = ba_mapping_data_input_directory, \n",
+    "                          county_shapefile_input_directory = county_shapefile_input_directory,\n",
+    "                          state_shapefile_input_directory = state_shapefile_input_directory,\n",
+    "                          image_output_directory = image_output_directory, \n",
     "                          image_resolution = 300, \n",
     "                          save_images = True)\n"
    ]
